[gd_scene load_steps=2 format=3 uid="uid://c5tai0s4khvnm"]

[ext_resource type="Script" uid="uid://djvd1qk1dn7wc" path="res://Title/title_screen.gd" id="1_2tuh7"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tuh7")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = 53.0
offset_right = 83.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="SettingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = 135.0
offset_right = 83.5
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = 219.0
offset_right = 83.5
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
